--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
-    "emotion": "^9.2.12",
+    "emotion": "^10.0.6",
     "fastclick": "^1.0.6",
     "font-awesome": "^4.7.0",
     "immutable": "^4.0.0-rc.9",
     "lodash": "^4.17.11",
-    "memoize-one": "^4.0.2",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-redux": "^5.0.7",
+    "memoize-one": "^5.0.0",
+    "react": "^16.8.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^2.1.0",
     "react-toastify": "^4.4.0",
-    "reactstrap": "^6.5.0",
+    "reactstrap": "^7.0.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.1",
     "redux-persist": "^5.10.0",
@@ -26,14 +26,20 @@
     "rxjs": "^5.5.6"
   },
   "devDependencies": {
-    "@epegzz/sass-vars-loader": "^3.4.0",
+    "@epegzz/sass-vars-loader": "^4.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
     "cra-rewired": "^1.0.12",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.4",
     "pug-as-jsx-loader": "^1.0.59",
-    "react-scripts": "2.0.4",
+    "react-scripts": "2.1.3",
     "yaml-loader": "^0.5.0"
   },
   "scripts": {
