--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-sass": "^4.9.4",
     "pug-as-jsx-loader": "^1.0.59",
     "react-scripts": "2.1.3",
+    "tailwindcss": "^0.7.3",
     "yaml-loader": "^0.5.0"
   },
   "scripts": {
